<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_sky"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#F44336"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="50dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/hint_location"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="400dp"
        android:text="@string/text_location"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:popupElevation="10dp"
        android:id="@+id/buttonLocation"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="325dp"
        android:text="@string/button_location" />

    <Button
        android:popupElevation="10dp"
        android:id="@+id/buttonAlarm"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="325dp"
        android:text="@string/button_alarm" />

    <EditText
        android:id="@+id/editTextDays"
        android:layout_width="50dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/hint_days"
        android:inputType="number|textEmailAddress" />

    <TextView
        android:id="@+id/textViewDays"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="375dp"
        android:text="@string/text_days"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewRain"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="289dp"
        android:text="@string/text_rain"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="166dp"
        android:layout_height="45dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/buttonForecast"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="325dp"
        android:text="@string/button_forecast" />

    <Button
        android:id="@+id/buttonPreferences"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="325dp"
        android:text="@string/button_preferences" />

</RelativeLayout>