<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:srcCompat="@drawable/u00d" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:paddingStart="2dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/listviewLocation"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/listview_location"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/listviewDescription"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/listview_description" />

        <TextView
            android:id="@+id/listviewDate"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/listview_date" />

        <TextView
            android:id="@+id/listviewPrecipitation"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/listview_precipitation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listviewTemp"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/listview_temp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>