<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_sky"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#F44336"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp" />

    <TextView
        android:id="@+id/textViewAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="400dp"
        android:text="@string/alarm_title"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonOpenAlarm"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="300dp"
        android:text="@string/alarm_button_open" />

    <Button
        android:id="@+id/buttonCancelAlarm"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="100dp"
        android:text="@string/alarm_button_cancel" />

</RelativeLayout>